Fix PhotoBox Banner

--- a/src/_description/style.sass
+++ b/src/_description/style.sass
@@ -9,6 +9,9 @@
     display: flex
     align-items: center
     justify-content: center
+    img
+      object-fit: contain
+      height: 100%
   .photobox-hero
     display: flex
     flex-direction: row
